--- a/user-creation-deletion/src/Components/Users.css
+++ b/user-creation-deletion/src/Components/Users.css
@@ -1,3 +1,14 @@
+.new-user {
+    background-color: #a55f63;
+    padding: 1rem;
+    margin: 2rem auto;
+    width: 40rem;
+    max-width: 95%;
+    border-radius: 12px;
+    text-align: center;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  }
+
 .new-user__controls {
     display: flex;
     flex-wrap: wrap;
@@ -21,6 +32,37 @@
     max-width: 100%;
 }
 
-.new-expense__actions {
+.new-user__actions {
     text-align: right;
 }
+
+.new-user button {
+    
+    font: inherit;
+    cursor: pointer;
+    padding: 1rem 5rem;
+    border: 1px solid #dea6f8;
+    background-color: #40005d;
+    color: white;
+    border-radius: 12px;
+    margin-right: 8rem;
+    margin-top: 1rem;
+    
+  }
+  
+  .new-user button:hover,
+  .new-user button:active {
+    background-color: #510674;
+    border-color: #510674;
+  }
+  
+  .new-user button.alternative {
+    color: #220131;
+    border-color: transparent;
+    background-color: transparent;
+  }
+  
+  .new-user button.alternative:hover,
+  .new-user button.alternative:active {
+    background-color: #ddb3f8;
+  }
