updated color scheme

--- a/user-creation-deletion/src/Components/NewUser.css
+++ b/user-creation-deletion/src/Components/NewUser.css
@@ -1,5 +1,5 @@
 .new-user {
-    background-color: #a892ee;
+    background-color: #e793e0;
     padding: 1rem;
     margin: 2rem auto;
     width: 50rem;
