--- a/user-creation-deletion/src/Components/NewUserForm.css
+++ b/user-creation-deletion/src/Components/NewUserForm.css
@@ -9,8 +9,6 @@
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   }
 
-
-
 .new-user__controls {
     display: flex;
     flex-wrap: wrap;
@@ -43,10 +41,10 @@
     font: inherit;
     cursor: pointer;
     padding: 1rem 5rem;
-    border: 1px solid #dea6f8;
-    background-color: #40005d;
+    border: 3px solid #dea6f8;
+    background-color: #550051;
     color: white;
-    border-radius: 12px;
+    border-radius: 8px;
     margin-right: 8rem;
     margin-top: 1rem;
     
@@ -54,7 +52,7 @@
   
   .new-user button:hover,
   .new-user button:active {
-    background-color: #510674;
+    background-color: #2b001e;
     border-color: #510674;
   }
   
